restructure to single library, for now
Signed-off-by: Stefano Braghin <527806+stefano81@users.noreply.github.com>