@@ -20,13 +20,9 @@ public class DependentManager extends ResourceBasedManager<Dependent> {
     private static final Collection<ResourceEntry> resourceDependentList = LocalizationManager.getInstance().getResources(Resource.DEPENDENT);
     private final static DependentManager DEPENDENT_MANAGER = new DependentManager();
 
-    public static DependentManager getInstance() {
-        return DEPENDENT_MANAGER;
-    }
+    public static DependentManager getInstance() {return DEPENDENT_MANAGER;}
 
-    private DependentManager() {
-        super();
-    }
+    private DependentManager() {super();}
 
 
     @Override
@@ -40,7 +36,7 @@ public class DependentManager extends ResourceBasedManager<Dependent> {
         String key = sname.toUpperCase();
 
         Dependent dependent = new Dependent(sname);
-        return List.of(new Tuple<>(key, dependent));
+        return Arrays.asList(new Tuple<>(key, dependent));
     }
 
     @Override
