@@ -19,14 +19,8 @@ import java.util.List;
 
 public class MaritalStatusManager extends ResourceBasedManager<MaritalStatus> {
     private final static MaritalStatusManager MARITAL_STATUS_MANAGER = new MaritalStatusManager();
-
-    public static MaritalStatusManager getInstance() {
-        return MARITAL_STATUS_MANAGER;
-    }
-
-    private MaritalStatusManager() {
-        super();
-    }
+    public static MaritalStatusManager getInstance() { return MARITAL_STATUS_MANAGER; }
+    private MaritalStatusManager() {super();}
 
     private List<MaritalStatus> statusList;
 
@@ -55,7 +49,7 @@ public class MaritalStatusManager extends ResourceBasedManager<MaritalStatus> {
 
         statusList.add(maritalStatus);
 
-        return List.of(new Tuple<>(key, maritalStatus));
+        return Arrays.asList(new Tuple<>(key, maritalStatus));
     }
 
 }
