@@ -20,14 +20,8 @@ public class StreetNameManager extends ResourceBasedManager<String> {
             LocalizationManager.getInstance().getResources(Resource.STREET_NAMES);
 
     private final static StreetNameManager STREET_NAME_MANAGER = new StreetNameManager();
-
-    public static StreetNameManager getInstance() {
-        return STREET_NAME_MANAGER;
-    }
-
-    private StreetNameManager() {
-        super();
-    }
+    public static StreetNameManager getInstance() { return STREET_NAME_MANAGER; }
+    private StreetNameManager() {super();}
 
 
     @Override
@@ -40,7 +34,7 @@ public class StreetNameManager extends ResourceBasedManager<String> {
         String sname = line.get(0).trim();
         String key = sname.toUpperCase();
 
-        return List.of(new Tuple<>(key, sname));
+        return Arrays.asList(new Tuple<>(key, sname));
     }
 
     @Override
